service-order/resources.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: otus-order
  name: otus-service-order
  labels:
    app.kubernetes.io/name: otus-service-order
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: otus-service-order
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: otus-service-order
    spec:
      containers:
        - name: otus-service-order
          image: auwerk/otus-service-order:v1.0.0
          ports:
            - name: web
              containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  namespace: otus-order
  name: otus-service-order
  labels:
    app.kubernetes.io/name: otus-service-order
spec:
  selector:
    app.kubernetes.io/name: otus-service-order
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      name: http
